@@ -8,7 +8,7 @@ BEGIN_DEVICE_LIBRARY(vcammod)
     ADD_SUBDIRECTORY(vdub)
     IF (UNIX)
       # make sure we have the ffmpeg device
-      ADD_SUBDIRECTORY(${YARP_DIR}/src/modules/ffmpeg 
+      ADD_SUBDIRECTORY($ENV{YARP_ROOT}/src/modules/ffmpeg 
 	${CMAKE_BINARY_DIR}/ffmpeg)
     ENDIF (UNIX)
 END_DEVICE_LIBRARY(vcammod)
